Token for client
1. add a new service for token update
2. MainCtrl setup a timer to get the token timely
3. Saving the token in the storage, so involving the
   angular-local-storage
4. While http request for server, get the token
5. Need to handle token as configure of http instance

--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/file-saver/FileSaver.js"></script>
     <script src="bower_components/angular-uuid4/angular-uuid4.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
 
     <link rel="stylesheet" href="bower_components/bootswatch/paper/bootstrap.css"/>
     <link href="file_manager_src/css/animations.css" rel="stylesheet">
@@ -33,6 +34,7 @@
     <script src="file_manager_src/js/providers/config.js"></script>
     <script src="file_manager_src/js/entities/chmod.js"></script>
     <script src="file_manager_src/js/entities/item.js"></script>
+    <script src="file_manager_src/js/services/token.js"></script>
     <script src="file_manager_src/js/services/apihandler.js"></script>
     <script src="file_manager_src/js/services/apimiddleware.js"></script>
     <script src="file_manager_src/js/services/filenavigator.js"></script>
