--- a/public/file_manager_src/templates/item-context-menu.html
+++ b/public/file_manager_src/templates/item-context-menu.html
@@ -21,7 +21,7 @@
 
         <li ng-show="config.allowedActions.downloadMultiple && !selectionHas('dir') && !singleSelection()">
             <a href="" tabindex="-1" ng-click="download()">
-                <i class="glyphicon glyphicon-cloud-download"></i> {{'download_as_zip' | translate}}
+                <i class="glyphicon glyphicon-cloud-download"></i> {{'download_multi_file' | translate}}
             </a>
         </li>
 
