--- a/public/file_manager_src/templates/main-icons.html
+++ b/public/file_manager_src/templates/main-icons.html
@@ -33,3 +33,5 @@
         {{ fileNavigator.error }}
     </div>
 </div>
+
+<div ng-include="config.tplPath + '/main-translation-status.html'"></div>
