--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,8 @@
     <script src="bower_components/angular-uuid4/angular-uuid4.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
 
-    <link rel="stylesheet" href="bower_components/bootswatch/paper/bootstrap.css"/>
+    <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />-->
+    <link rel="stylesheet" href="bower_components/bootswatch/united/bootstrap.css"/>
     <link href="file_manager_src/css/animations.css" rel="stylesheet">
     <link href="file_manager_src/css/dialogs.css" rel="stylesheet">
     <link href="file_manager_src/css/main.css" rel="stylesheet">
