Add nav button for show/hide the convertion status

--- a/public/file_manager_src/templates/navbar.html
+++ b/public/file_manager_src/templates/navbar.html
@@ -33,6 +33,10 @@
                             <i class="glyphicon glyphicon-th-list"></i>
                         </button>
 
+                        <button class="btn btn-flat btn-sm" ng-click="$parent.setConvertionStatus()" title="{{'convert_status' | translate}}">
+                            <i class="glyphicon glyphicon-upload"></i>
+                        </button>
+
                         <div class="btn-group">
                             <button class="btn btn-flat btn-sm dropdown-toggle" type="button" id="dropDownMenuLang"
                                     data-toggle="dropdown" aria-expanded="true">
