--- a/public/file_manager_src/templates/main-translation-status.html
+++ b/public/file_manager_src/templates/main-translation-status.html
@@ -1,4 +1,4 @@
-<div class="col-sm-12 bottom-show">
+<div class="col-sm-12 bottom-show" ng-show="bShowConvertionStatus">
     <table class="table table-no-margin table-responsive">
         <thead>
         <tr>
