--- a/public/file_manager_src/templates/main-translation-status.html
+++ b/public/file_manager_src/templates/main-translation-status.html
@@ -1,17 +1,19 @@
 <div class="col-sm-12 bottom-show" ng-show="bShowConvertionStatus">
-    <table class="table table-no-margin table-responsive">
+    <H1 class="text-center bg-info ">Center aligned text.</H1>
+
+    <table class="table table-no-margin table-responsive text-center">
         <thead>
         <tr>
-            <th>
+            <th class="text-center">
                 编号
             </th>
-            <th>
+            <th class="text-center">
                 产品
             </th>
-            <th>
+            <th class="text-center">
                 交付时间
             </th>
-            <th>
+            <th class="text-center">
                 状态
             </th>
         </tr>
@@ -89,29 +91,25 @@
         </tr>
         </tbody>
     </table>
-    <div class="text-center">
-        <ul contenteditable="true" class="pagination">
-            <li>
-                <a href="#">上一页</a>
-            </li>
-            <li>
-                <a href="#">1</a>
-            </li>
-            <li>
-                <a href="#">2</a>
-            </li>
-            <li>
-                <a href="#">3</a>
-            </li>
-            <li>
-                <a href="#">4</a>
-            </li>
-            <li>
-                <a href="#">5</a>
-            </li>
-            <li>
-                <a href="#">下一页</a>
-            </li>
-        </ul>
+
+
+    <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group dropup">
+            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
+                Action <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+            </ul>
+        </div>
+
+        <div class="btn-group">
+            <button type="button" class="btn btn-danger">Clear Over</button>
+        </div>
     </div>
+
 </div>
