Set the page and clear button bottom right

--- a/public/file_manager_src/templates/main-translation-status.html
+++ b/public/file_manager_src/templates/main-translation-status.html
@@ -93,7 +93,7 @@
     </table>
 
 
-    <div class="btn-toolbar" role="toolbar">
+    <div class="btn-toolbar pull-right" role="toolbar">
         <div class="btn-group dropup">
             <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
                 Action <span class="caret"></span>
