Add converting status list
Involving lodash lib

--- a/views/index.html
+++ b/views/index.html
@@ -19,6 +19,7 @@
     <script src="bower_components/file-saver/FileSaver.js"></script>
     <script src="bower_components/angular-uuid4/angular-uuid4.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/lodash/dist/lodash.js"></script>
 
     <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />-->
     <link rel="stylesheet" href="bower_components/bootswatch/united/bootstrap.css"/>
