Replace the convertion status icon

--- a/public/file_manager_src/templates/navbar.html
+++ b/public/file_manager_src/templates/navbar.html
@@ -34,7 +34,7 @@
                         </button>
 
                         <button class="btn btn-flat btn-sm" ng-click="$parent.setConvertionStatus()" title="{{'convert_status' | translate}}">
-                            <i class="glyphicon glyphicon-upload"></i>
+                            <i class="glyphicon glyphicon-log-in"></i>
                         </button>
 
                         <div class="btn-group">
