Convert list status
phase 4, update status from server, and set a timer to get

--- a/public/file_manager_src/templates/main-translation-status.html
+++ b/public/file_manager_src/templates/main-translation-status.html
@@ -30,7 +30,7 @@
                 {{item.name}}
             </td>
             <td>
-                {{item.convertOver ? 'file_in_process' : 'file_finished'}}
+                {{!item.convertOver ? 'file_in_process' : 'file_finished' | translate}}
             </td>
         </tr>
         </tbody>
