--- a/views/index.html
+++ b/views/index.html
@@ -40,6 +40,7 @@
     <script src="file_manager_src/js/services/apihandler.js"></script>
     <script src="file_manager_src/js/services/apimiddleware.js"></script>
     <script src="file_manager_src/js/services/filenavigator.js"></script>
+    <script src="file_manager_src/js/services/convert.js"></script>
     <script src="file_manager_src/js/providers/translations.js"></script>
     <script src="file_manager_src/js/controllers/main.js"></script>
     <script src="file_manager_src/js/controllers/selector-controller.js"></script>
